--- a/menu.html
+++ b/menu.html
@@ -7,6 +7,12 @@
     body{
       background-color: #FF0000;
     }
+    #titulo{
+      text-decoration: underline;
+      color: maroon;
+      font-family: comic-sans, arial, helvetica, comfortaa;
+      text-weight: lighter;
+    }
   </style>
 </head>
 <body>
