--- a/menu.html
+++ b/menu.html
@@ -5,7 +5,7 @@
   <title>menu</title>
   <style>
     body{
-      background-color: #FF0000;
+      background-color: #00ff00;
     }
     #titulo{
       text-decoration: underline;
@@ -19,5 +19,10 @@
   <header>
     <h1 id="titulogeral">Menu</h1>
   </header>
+  <nav class="navbar">
+    <span>Configurações</span>
+    <span>Histoŕico</span>
+    <span>Minhas Publicações</span>
+  </nav>
 </body>
 </html>
