--- a/menu.html
+++ b/menu.html
@@ -7,6 +7,10 @@
     body{
       background-color: #00ff00;
     }
+    header{
+      margin: auto;
+      background-color
+    }
     #titulo{
       text-decoration: underline;
       color: maroon;
